--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -31,9 +31,9 @@ a {
 }
 
 .profile-pic {
-  width: 360px;
+  width: 98%;
   height: 120px;
-  border-radius: 10.4%;
+  border-radius: 14%;
   object-fit: cover;
   margin-bottom: 15px;
   border: 2px solid black;
